fix: increase button contrast

--- a/src/components/ShellBox/ShellBox.scss
+++ b/src/components/ShellBox/ShellBox.scss
@@ -68,7 +68,7 @@
     }
 
     button {
-      background-color: var(--brand2);
+      background-color: var(--brand);
       border-radius: 0 0.3rem 0.3rem 0.3rem;
       border-width: 0;
       i {
